publish: Changes to layer to reflect the new field static image config
generated from commit fb0973057bc047522b68196b52aba1ad4ebbfb7d

--- a/index.html
+++ b/index.html
@@ -1921,6 +1921,11 @@ Remember — the response is jsonapi format
 <td style="text-align: right">Object</td>
 </tr>
 <tr>
+<td>staticImageConfig</td>
+<td style="text-align: center">Custom configuration</td>
+<td style="text-align: right">Object</td>
+</tr>
+<tr>
 <td>default</td>
 <td style="text-align: center">If it&rsquo;s a default layer for the dataset that it belongs</td>
 <td style="text-align: right">Boolean</td>
@@ -1986,7 +1991,8 @@ Remember — the response is jsonapi format
               </span><span class="p">}</span><span class="w">
             </span><span class="p">}</span><span class="w">
           </span><span class="p">},</span><span class="w">
-          </span><span class="nt">"applicationConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{}</span><span class="w">
+          </span><span class="nt">"applicationConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{},</span><span class="w">
+          </span><span class="nt">"staticImageConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{}</span><span class="w">
         </span><span class="p">}</span><span class="w">
       </span><span class="p">}</span><span class="w">
    </span><span class="p">],</span><span class="w">
@@ -2153,7 +2159,8 @@ Remember — the response is jsonapi format
           </span><span class="p">}</span><span class="w">
         </span><span class="p">}</span><span class="w">
       </span><span class="p">},</span><span class="w">
-      </span><span class="nt">"applicationConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{}</span><span class="w">
+      </span><span class="nt">"applicationConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{},</span><span class="w">
+      </span><span class="nt">"staticImageConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{}</span><span class="w">
     </span><span class="p">}</span><span class="w">
   </span><span class="p">},</span><span class="w">
   </span><span class="nt">"meta"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
@@ -2221,6 +2228,13 @@ Remember — the response is jsonapi format
 </tr>
 <tr>
 <td>applicationConfig</td>
+<td style="text-align: center">Custom configuration</td>
+<td style="text-align: right">Object</td>
+<td style="text-align: right">Valid object</td>
+<td style="text-align: right">No</td>
+</tr>
+<tr>
+<td>staticImageConfig</td>
 <td style="text-align: center">Custom configuration</td>
 <td style="text-align: right">Object</td>
 <td style="text-align: right">Valid object</td>
@@ -2321,6 +2335,13 @@ Remember — the response is jsonapi format
 </tr>
 <tr>
 <td>applicationConfig</td>
+<td style="text-align: center">Custom configuration</td>
+<td style="text-align: right">Object</td>
+<td style="text-align: right">Valid object</td>
+<td style="text-align: right">No</td>
+</tr>
+<tr>
+<td>staticImageConfig</td>
 <td style="text-align: center">Custom configuration</td>
 <td style="text-align: right">Object</td>
 <td style="text-align: right">Valid object</td>
