--- a/index.html
+++ b/index.html
@@ -119,11 +119,7 @@
       <div class="content">
         <h1 id="introduction">Introduction</h1>
 
-<p>Welcome to the Awesome API!</p>
-
-<p>We have language bindings in Shell, Ruby, and Python! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
-
-<p>This API documentation page was created with <a href="https://github.com/tripit/slate">Slate</a>.</p>
+<p>Welcome to the Resource Watch API Documentation</p>
 
           <h1 id="authentication">Authentication</h1>
 
